# neun

./: CMakeLists.txt  basic.txt  simulation_graphs.ipynb  test.ipynb
examples/: CMakeLists.txt  basic.cpp  basicGA.cpp  network.cpp  networkGA.cpp
integrators/: RungeKutta4.h
models/: HindmarshRoseModel.h  HodgkinHuxleyModel.h
optimizers/: AmplitudeObjective.h  CMakeLists.txt  DynamicalSystemLimiter.h  NetworkGAOptimizer.h  NeuronGAOptimizer.h  NeuronNetwork.h  ParamLimiter.h  VoltageDifferenceObjective.h  optimizerUtils.h
wrappers/: CMakeLists.txt  NeuronOptimizerWrapper.h  OptimizationObjectiveWrapper.h
